1.0.0
- **BREAKING CHANGE** Change `PryRemoteEm::Server.run` method signature to hash-only form (`remote_pry_em` method's signature didn't changed)
- **BREAKING CHANGE** Change `allow_shell_cmds` setting to `true` by default instead of `false`, because most of projects does not use $SAFE and any shell command can be run from Ruby code with `system` call or backticks, so this option is illusion in most cases
- **BREAKING CHANGE** `PryRemoteEm::Server.run` returns whole server description instead of URL
- **BREAKING CHANGE** Rename public constants to avoid confusing
- Add `PryRemoteEm::Sandbox` as target by default with `p`/`puts`/`print` handlers pointing to remote client
- Add `PryRemoteEm::Sandbox.add_error(exception, binding)` to store errors with it's bindings for easy access from sandboxed console like `cd last_error.binding` (also integrated with `wtf?` command)
- Add proxy-by-default setting to CLI
- Add possibility to use environment variables on CLI connection
- Add more environment variables to control server without code changing (described in readme)
- Add possibility to set external url for server (to use lib with NAT or Docker) using `PRYEMURL` or `external_url` option
- Add ability to use custom server name using `PRYEMNAME` environment variable or `name` option (and displaying it in the prompt)
- Add ability to start server without starting broker using `PRYEMREMOTEBROKER` environment variable or `remote_broker` option
- Add `pry-remote-em-broker` binary to start broker without starting server
- Add `Object#pry_remote_em` alias to `Object#remote_pry_em` to avoid common confusing
- Add support for several URIs per one server (when binding to 0.0.0.0)
- Add support for empty environment variables and nil arguments on server start
- Add support for options hash as first argument instead of third in `Object#remote_pry_em`
- Add local history loading on session start
- Add support for `pry-coolline` (just install this gem to make it work)